feat: add 5th hypothesis to the report

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,9 @@
     "import cv2\n",
     "import src.image_classification.features as feat\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from scipy.stats import mannwhitneyu, spearmanr, kruskal, levene, ttest_ind, pearsonr, chi2_contingency, f_oneway"
    ]
   },
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +162,7 @@
       "t-test: Statistic = -2.284424004913432, p-value = 0.022401779559765453\n",
       "ANOVA: Statistic = 0.5733189930562239, p-value = 0.448952071385762\n",
       "Mann-Whitney: Statistic = 10996543.5, p-value = 5.262970510833023e-16\n",
-      "Гипотеза не подтверждена: наличие металла не связано c серебряным цветом.\n"
+      "Итог: гипотеза не подтверждена: наличие металла не связано c серебряным цветом.\n"
      ]
     }
    ],
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +246,7 @@
       "t-test: Statistic = -11.379057124078555, p-value = 1.9776123451846287e-29\n",
       "ANOVA: Statistic = 52.405427227996164, p-value = 4.680228101392663e-13\n",
       "Chi-square: Statistic = 19.34257889433447, p-value = 1.0924297310604447e-05\n",
-      "Гипотеза подтверждена: изображения c картоном имеют больше параллельных линий.\n"
+      "Итог: гипотеза подтверждена: изображения c картоном имеют больше параллельных линий.\n"
      ]
     }
    ],
@@ -309,6 +311,96 @@
     "    print(\"Итог: гипотеза подтверждена: изображения c картоном имеют больше параллельных линий.\")\n",
     "else:\n",
     "    print(\"Итог: гипотеза не подтверждена: изображения c картоном не имеют значительно больше параллельных линий.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №5 Металлические поверхности часто имеют высокую отражающую способность. \n",
+    "\n",
+    "Металлические поверхности, как правило, обладают высокой отражающей способностью, что делает их уникальными в сравнении с другими материалами. Высокая отражающая способность металла может влиять на визуальное восприятие объектов. В данном эксперименте мы стремимся проверить, действительно ли металлические поверхности обладают более высоким уровнем отражений по сравнению с другими классами материалов.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "\n",
+    "    - **t-критерий Стьюдента (t-test):**  Этот метод позволяет сравнить среднюю отражающую способность изображений металла и других классов. Мы будем использовать его для определения, существуют ли статистически значимые различия между этими двумя группами.\n",
+    "\n",
+    "    - **Корреляция Пирсона:** С помощью этого теста мы проверим наличие линейной связи между количеством отражений и принадлежностью к классу \"металл\". Это поможет нам понять, насколько сильно отражающая способность связана с материалом.\n",
+    "\n",
+    "    - **Критерий хи-квадрат:** Этот тест будет использован для проверки отличий доли изображений с высоким уровнем отражений между металлом и другими классами. Мы разделим изображения на две группы: с высоким уровнем отражений и с низким, и проверим, есть ли статистически значимые различия между ними."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = -2.5612454595984153, p-value = 0.010464870898548239\n",
+      "Pearson Correlation: Statistic = 0.005891723334828736, p-value = 0.407558471373331\n",
+      "Chi-square: Statistic = 35.91242941824723, p-value = 2.0638790312840235e-09\n",
+      "Итог: гипотеза не подтверждена: наличие металла не связано с высоким уровнем отражений.\n"
+     ]
+    }
+   ],
+   "source": [
+    "metal_path = os.path.join(path + \"/garbage-dataset\", \"metal\")\n",
+    "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"metal\"]\n",
+    "\n",
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None:\n",
+    "            images.append(image)\n",
+    "    return images\n",
+    "\n",
+    "reflection_calculator = feat.AmountOfReflections()\n",
+    "\n",
+    "metal_images = load_images_from_folder(metal_path)\n",
+    "metal_reflections = [reflection_calculator(img) for img in metal_images]\n",
+    "\n",
+    "other_reflections = []\n",
+    "for other_path in other_paths:\n",
+    "    other_images = load_images_from_folder(other_path)\n",
+    "    other_reflections.extend([reflection_calculator(img) for img in other_images])\n",
+    "\n",
+    "# 1. t-критерий Стьюдента\n",
+    "t_stat, t_pvalue = ttest_ind(metal_reflections, other_reflections, equal_var=False)\n",
+    "\n",
+    "# 2. Корреляция Пирсона\n",
+    "le = LabelEncoder()\n",
+    "all_reflections = metal_reflections + other_reflections\n",
+    "all_labels = ['metal'] * len(metal_reflections) + ['other'] * len(other_reflections)\n",
+    "numeric_labels = le.fit_transform(all_labels)\n",
+    "\n",
+    "correlation, p_value_corr = pearsonr(all_reflections, numeric_labels)\n",
+    "\n",
+    "# 3. Тест хи-квадрат\n",
+    "reflection_binary = [1 if reflection >= 100 else 0 for reflection in all_reflections]\n",
+    "contingency_table = pd.crosstab(reflection_binary, numeric_labels)\n",
+    "chi2_stat, p_value_chi2, _, _ = chi2_contingency(contingency_table)\n",
+    "\n",
+    "results = {\n",
+    "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
+    "    \"Pearson Correlation\": {\"statistic\": correlation, \"p-value\": p_value_corr},\n",
+    "    \"Chi-square\": {\"statistic\": chi2_stat, \"p-value\": p_value_chi2},\n",
+    "}\n",
+    "\n",
+    "for test, result in results.items():\n",
+    "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
+    "\n",
+    "alpha = 0.05\n",
+    "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
+    "\n",
+    "if all(hypothesis_results.values()):\n",
+    "    print(\"Итог: гипотеза подтверждена: наличие металла связано с высоким уровнем отражений.\")\n",
+    "else:\n",
+    "    print(\"Итог: гипотеза не подтверждена: наличие металла не связано с высоким уровнем отражений.\")"
    ]
   }
  ],
