feat: add 6th hypothesis to the report

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pasha/dump5/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import kagglehub\n",
@@ -26,6 +35,7 @@
     "import src.image_classification.features as feat\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import glob\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from scipy.stats import mannwhitneyu, spearmanr, kruskal, levene, ttest_ind, pearsonr, chi2_contingency, f_oneway"
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,6 +411,80 @@
     "    print(\"Итог: гипотеза подтверждена: наличие металла связано с высоким уровнем отражений.\")\n",
     "else:\n",
     "    print(\"Итог: гипотеза не подтверждена: наличие металла не связано с высоким уровнем отражений.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №6: Изображения с пластиком и стеклом часто имеют больше прозрачных областей.\n",
+    "\n",
+    "В данной гипотезе мы предполагаем, что изображения, содержащие пластик и стекло, будут иметь больше прозрачных областей по сравнению с изображениями других классов. Это может быть связано с природой этих материалов, которые часто обладают высокой степенью прозрачности и могут создавать визуально заметные прозрачные участки на изображениях.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "\n",
+    "    - **Тест Манна-Уитни:**  Этот тест будет использоваться для сравнения распределений количества прозрачных областей на изображениях, содержащих пластик и стекло, с распределением на изображениях других классов.\n",
+    "\n",
+    "    - **Коэффициент корреляции Спирмена:** Мы применим этот метод для оценки монотонной зависимости между количеством прозрачных областей и классом изображения. Это позволит нам понять, насколько сильно количество прозрачных областей связано с принадлежностью изображения к классу \"пластик\" или \"стекло\" по сравнению с другими классами.\n",
+    "\n",
+    "    - **Тест Крускала-Уоллиса:** Этот тест будет использоваться для сравнения медианных значений количества прозрачных областей между тремя группами: пластик, стекло и другие классы. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mann-Whitney U test: Statistic = 63373648.0, p-value = 2.0179651032763478e-82\n",
+      "Spearman correlation: Correlation = -0.12222108103161104, p-value = 5.038550422304453e-83\n",
+      "Kruskal-Wallis test: Statistic = 369.849759985094, p-value = 4.876913498602153e-81\n",
+      "Итог: гипотеза подтверждена: пластик и стекло имеют больше прозрачных областей.\n"
+     ]
+    }
+   ],
+   "source": [
+    "plastic_glass_classes = ['plastic', 'glass']\n",
+    "transparency_data = {'plastic': [], 'glass': [], 'other': []}\n",
+    "\n",
+    "for class_name in classes:\n",
+    "    class_path = os.path.join(path + \"/garbage-dataset/\", class_name)\n",
+    "    image_paths = glob.glob(os.path.join(class_path, \"*.jpg\"))  # Предположим, что файлы изображений имеют расширение .jpg\n",
+    "\n",
+    "    for image_path in image_paths:\n",
+    "        image = cv2.imread(image_path)\n",
+    "        transparency = feat.AmountOfTransparency()(image)\n",
+    "\n",
+    "        if class_name in plastic_glass_classes:\n",
+    "            transparency_data['plastic'].append(transparency)\n",
+    "            transparency_data['glass'].append(transparency)\n",
+    "        else:\n",
+    "            transparency_data['other'].append(transparency)\n",
+    "\n",
+    "# 1. Тест Манна-Уитни (для пластика/стекла против остальных)\n",
+    "u_statistic, p_value_mw = mannwhitneyu(transparency_data['plastic'] + transparency_data['glass'], transparency_data['other'])\n",
+    "print(f\"Mann-Whitney U test: Statistic = {u_statistic}, p-value = {p_value_mw}\")\n",
+    "\n",
+    "# 2. Коэффициент корреляции Спирмена\n",
+    "all_transparency = transparency_data['plastic'] + transparency_data['glass'] + transparency_data['other']\n",
+    "labels = ['plastic_glass'] * (len(transparency_data['plastic']) + len(transparency_data['glass'])) + ['other'] * len(transparency_data['other'])\n",
+    "\n",
+    "spearman_corr, p_value_spearman = spearmanr(all_transparency, [1 if label == 'plastic_glass' else 0 for label in labels])\n",
+    "print(f\"Spearman correlation: Correlation = {spearman_corr}, p-value = {p_value_spearman}\")\n",
+    "\n",
+    "# 3. Тест Крускала-Уоллиса\n",
+    "kruskal_stat, p_value_kruskal = kruskal(transparency_data['plastic'], transparency_data['glass'], transparency_data['other'])\n",
+    "print(f\"Kruskal-Wallis test: Statistic = {kruskal_stat}, p-value = {p_value_kruskal}\")\n",
+    "\n",
+    "# Интерпретация гипотезы\n",
+    "alpha = 0.05\n",
+    "if p_value_mw < alpha and p_value_spearman < alpha and p_value_kruskal < alpha:\n",
+    "    print(\"Итог: гипотеза подтверждена: пластик и стекло имеют больше прозрачных областей.\")\n",
+    "else:\n",
+    "    print(\"Итог: гипотеза не подтверждена: нет статистически значимых различий между классами.\")"
    ]
   }
  ],
