--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -486,6 +486,82 @@
     "else:\n",
     "    print(\"Итог: гипотеза не подтверждена: нет статистически значимых различий между классами.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №7: Металлы часто имеют гладкую текстуру по сравнению с другими материалами.\n",
+    "\n",
+    "В данной гипотезе мы выдвигаем предположение, что изображения, содержащие металлические материалы, будут демонстрировать более гладкую текстуру по сравнению с изображениями других классов, таких как пластик, стекло и различные виды отходов. Это связано с физическими свойствами металлов, которые часто обладают высокой отражательной способностью и гладкой поверхностью.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "\n",
+    "    - **Тест Манна-Уитни**: Этот тест будет применяться для сравнения распределений количества отражений на изображениях, содержащих металл, с распределением на изображениях других классов. \n",
+    "    \n",
+    "    - **Коэффициент корреляции Спирмена**: Мы используем этот метод для оценки монотонной зависимости между количеством отражений и классом изображения. Это поможет определить, насколько сильно количество отражений связано с принадлежностью изображения к классу \"металл\" по сравнению с другими классами.\n",
+    "\n",
+    "    - **Дисперсионный анализ (ANOVA)**: Этот метод будет использоваться для сравнения средних значений количества отражений между группами: металл и другие материалы. ANOVA позволяет оценить, есть ли статистически значимые различия в средних значениях между несколькими группами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mann-Whitney U Test p-value: 8.969264820020402e-20\n",
+      "Spearman correlation p-value: 8.239260503906844e-20\n",
+      "ANOVA p-value: 0.4075584713849223\n",
+      "Гипотеза не подтверждена: Нет значимых отличий между металлом и другими материалами.\n"
+     ]
+    }
+   ],
+   "source": [
+    "metal_path = os.path.join(path + \"/garbage-dataset\", \"metal\")\n",
+    "other_classes = ['trash', 'glass', 'battery', 'clothes', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
+    "\n",
+    "def collect_reflections(class_dirs):\n",
+    "    reflections = []\n",
+    "    for class_dir in class_dirs:\n",
+    "        for img_file in os.listdir(class_dir):\n",
+    "            img_path = os.path.join(class_dir, img_file)\n",
+    "            image = cv2.imread(img_path)\n",
+    "            if image is not None:\n",
+    "                reflections.append(feat.AmountOfReflections()(image))\n",
+    "    return reflections\n",
+    "\n",
+    "metal_reflections = collect_reflections([metal_path])\n",
+    "other_reflections = collect_reflections([os.path.join(path + \"/garbage-dataset\", cls) for cls in other_classes])\n",
+    "\n",
+    "# 1. Тест Манна-Уитни (Mann-Whitney U Test)\n",
+    "u_stat, p_value_mwu = mannwhitneyu(metal_reflections, other_reflections, alternative='two-sided')\n",
+    "print(f'Mann-Whitney U Test p-value: {p_value_mwu}')\n",
+    "\n",
+    "# 2. Корреляция Спирмена (Spearman correlation) а\n",
+    "all_reflections = metal_reflections + other_reflections\n",
+    "class_labels = ['metal'] * len(metal_reflections) + ['other'] * len(other_reflections)\n",
+    "\n",
+    "spearman_corr, p_value_spearman = spearmanr(all_reflections, [0]*len(metal_reflections) + [1]*len(other_reflections))\n",
+    "print(f'Spearman correlation p-value: {p_value_spearman}')\n",
+    "\n",
+    "# 3. Дисперсионный анализ (ANOVA) \n",
+    "all_reflections_per_class = [\n",
+    "    metal_reflections,\n",
+    "    other_reflections\n",
+    "] \n",
+    "\n",
+    "anova_stat, p_value_anova = f_oneway(*all_reflections_per_class)\n",
+    "print(f'ANOVA p-value: {p_value_anova}')\n",
+    "\n",
+    "if p_value_mwu < 0.05 and p_value_spearman < 0.05 and p_value_anova < 0.05:\n",
+    "    print(\"Итог: гипотеза подтверждена: Металлы имеют значимые отличия в количестве отражений по сравнению с другими материалами.\")\n",
+    "else:\n",
+    "    print(\"Итог: гипотеза не подтверждена: Нет значимых отличий между металлом и другими материалами.\")\n"
+   ]
   }
  ],
  "metadata": {
