feat: add 8th hypothesis

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -16,24 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pasha/dump5/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import kagglehub\n",
     "import cv2\n",
     "import src.image_classification.features as feat\n",
     "import numpy as np\n",
+    "import scipy.stats as stats\n",
     "import pandas as pd\n",
     "import glob\n",
     "\n",
@@ -50,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,6 +553,85 @@
     "    print(\"Итог: гипотеза подтверждена: Металлы имеют значимые отличия в количестве отражений по сравнению с другими материалами.\")\n",
     "else:\n",
     "    print(\"Итог: гипотеза не подтверждена: Нет значимых отличий между металлом и другими материалами.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №8: Металл и пластик часто имеют яркие участки, особенно под прямым освещением.\n",
+    "\n",
+    "В данной гипотезе предполагается, что изображения, содержащие металлические и пластиковые материалы, будут демонстрировать более яркие участки, особенно при прямом освещении, по сравнению с изображениями других материалов.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "\n",
+    "    - **Тест Манна-Уитни**: тот тест будет использоваться для сравнения распределений количества ярких пикселей (отражений) на изображениях с металлом и пластиком по сравнению с изображениями других классов.\n",
+    "\n",
+    "    - **Корреляция Пирсона**: Этот метод позволит оценить линейную зависимость между количеством ярких пикселей и классом материала (металл и пластик против других).\n",
+    "\n",
+    "    - **Тест Левене**: Этот тест будет применяться для проверки равенства дисперсий яркости между изображениями с металлом и пластиком и изображениями с другими материалами. Он поможет определить, есть ли статистически значимые различия в вариации яркости между двумя группами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Критерий Манна-Уитни между металлом/пластиком и остальными: p-value = 0.24426556591075066\n",
+      "2. Корреляция Пирсона между яркостью и классом: -0.015498280007591004\n",
+      "3. Тест Левене на равенство дисперсий: p-value = 0.0123128462684152\n",
+      "\n",
+      "Гипотеза о том, что металл и пластик имеют яркие участки, не подтвердилась.\n"
+     ]
+    }
+   ],
+   "source": [
+    "shininess_data = {cls: [] for cls in classes}\n",
+    "\n",
+    "for cls in classes:\n",
+    "    class_path = os.path.join(path + \"/garbage-dataset/\", cls)\n",
+    "    for image_name in os.listdir(class_path):\n",
+    "        if image_name.endswith('.jpg') or image_name.endswith('.png'):\n",
+    "            img_path = os.path.join(class_path, image_name)\n",
+    "            image = cv2.imread(img_path)\n",
+    "            shininess = feat.AmountOfTextureShininess()(image)\n",
+    "            shininess_data[cls].append(shininess)\n",
+    "\n",
+    "metal_plastic_shininess = np.array(shininess_data['metal'] + shininess_data['plastic'])\n",
+    "other_shininess = []\n",
+    "\n",
+    "for cls in classes:\n",
+    "    if cls not in ['metal', 'plastic']:\n",
+    "        other_shininess.extend(shininess_data[cls])\n",
+    "\n",
+    "other_shininess = np.array(other_shininess)\n",
+    "\n",
+    "# 1. Тест Манна-Уитни \n",
+    "u_statistic, p_value_metal_plastic_other = stats.mannwhitneyu(metal_plastic_shininess, other_shininess)\n",
+    "\n",
+    "# 2. Корреляция Пирсона между яркостью и классом \n",
+    "shininess_values = np.concatenate([metal_plastic_shininess, other_shininess])\n",
+    "labels = np.concatenate([np.ones(len(metal_plastic_shininess)), np.zeros(len(other_shininess))])\n",
+    "\n",
+    "# Вычисляем корреляцию между яркостью и классами\n",
+    "correlation, p_val_pierson = stats.pearsonr(shininess_values, labels)\n",
+    "\n",
+    "# 3. Тест Левене на равенство дисперсий\n",
+    "levene_statistic, p_value_levene = stats.levene(metal_plastic_shininess, other_shininess)\n",
+    "\n",
+    "print(\"Mann-Whitney U Test: p-value =\", p_value_metal_plastic_other)\n",
+    "print(\"Pearson correlation = \", correlation)\n",
+    "print(\"Levene's test: p-value =\", p_value_levene)\n",
+    "\n",
+    "# Интерпретация гипотезы\n",
+    "if p_value_metal_plastic_other < 0.05 and p_val_pierson < 0.05 and p_value_levene < 0.05:\n",
+    "    print(\"\\nИтог: гипотеза подтверждена: металл и пластик имеют яркие участки\")\n",
+    "else:\n",
+    "    print(\"\\nИтог: гипотеза не подтверждена: что металл и пластик не имеют яркие участки\")\n"
    ]
   }
  ],
