feat: add 11th hypothesis

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -708,6 +708,81 @@
     "else:\n",
     "    print(\"Итог: гипотеза не подтверждена: нет статистически значимых доказательств.\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №11 О наличие бумаги на картинке можно судить по скосу белого цвета.\n",
+    "\n",
+    "В этой гипотезе предполагается, что изображения, содержащие бумагу, будут иметь более высокую долю белого цвета по сравнению с изображениями других классов.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "\n",
+    "    - **t-критерий Стьюдента (t-test)**: Сравнение средней доли белого цвета в картинках с бумагой и другими классами.\n",
+    "\n",
+    "    - **ANOVA (дисперсионный анализ)**: Проверка, есть ли значимые различия между группами (бумага и другие классы) по количеству белого цвета."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-test: Statistic = -3.6453611581374994, p-value = 0.00027298340264948675\n",
+      "ANOVA: Statistic = 8.183087235905052, p-value = 0.004232707066685615\n",
+      "Итог: гипотеза подтверждена: наличие бумаги связано c белым цветом.\n"
+     ]
+    }
+   ],
+   "source": [
+    "paper_path = os.path.join(path + \"/garbage-dataset\", \"paper\")\n",
+    "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"paper\"]\n",
+    "\n",
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None: \n",
+    "            images.append(image)\n",
+    "    return images\n",
+    "\n",
+    "paper_images = load_images_from_folder(paper_path)\n",
+    "paper_white_amounts = [feat.AmountOfWhiteness()(img) for img in paper_images]\n",
+    "\n",
+    "other_white_amounts = []\n",
+    "for other_path in other_paths:\n",
+    "    other_images = load_images_from_folder(other_path)\n",
+    "    other_white_amounts.extend([feat.AmountOfWhiteness()(img) for img in other_images])\n",
+    "\n",
+    "# Проверка гипотез\n",
+    "# 1. t-критерий Стьюдента\n",
+    "t_stat, t_pvalue = ttest_ind(paper_white_amounts, other_white_amounts, equal_var=False)\n",
+    "\n",
+    "# 2. ANOVA\n",
+    "anova_stat, anova_pvalue = f_oneway(paper_white_amounts, other_white_amounts)\n",
+    "\n",
+    "results = {\n",
+    "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
+    "    \"ANOVA\": {\"statistic\": anova_stat, \"p-value\": anova_pvalue},\n",
+    "}\n",
+    "\n",
+    "for test, result in results.items():\n",
+    "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
+    "\n",
+    "alpha = 0.05\n",
+    "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
+    "\n",
+    "if all(hypothesis_results.values()):\n",
+    "    print(\"Итог: гипотеза подтверждена: наличие бумаги связано c белым цветом.\")\n",
+    "else:\n",
+    "    print(\"Итог: гипотеза не подтверждена: наличие бумаги не связано c белым цветом.\")"
+   ]
   }
  ],
  "metadata": {
