feat: add 1th hypothesis

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -316,6 +316,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -782,6 +789,75 @@
     "    print(\"Итог: гипотеза подтверждена: наличие бумаги связано c белым цветом.\")\n",
     "else:\n",
     "    print(\"Итог: гипотеза не подтверждена: наличие бумаги не связано c белым цветом.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №12 Одежду можно отличить от других классов по наличию волнистых краёв или складок, которые часто встречаются на ткани.\n",
+    "\n",
+    "В данной гипотезе предполагается, что изображения одежды будут иметь большее количество складок и волнистых краёв по сравнению с изображениями других классов.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "\n",
+    "    - **t-критерий Стьюдента (t-test)**: Сравнение среднего количества складок в картинках с одеждой и другими классами.\n",
+    "\n",
+    "    - **ANOVA (дисперсионный анализ)**: Проверка, есть ли значимые различия между группами (одежда и другие классы) по количеству складок.\n",
+    "\n",
+    "    - **Критерий Манна-Уитни (U-тест)**: тест для сравнения распределений двух групп (в данном случае одежда и другие классы)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Итог: гипотеза не подтверждена: различия между классами недостаточно статистически значимы.\n"
+     ]
+    }
+   ],
+   "source": [
+    "clothes_path = path + \"/garbage-dataset/clothes\"\n",
+    "other_classes = ['trash', 'glass', 'battery', 'metal', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
+    "data = {\"clothes\": [], \"others\": []}\n",
+    "\n",
+    "for img_name in os.listdir(clothes_path):\n",
+    "    img_path = os.path.join(clothes_path, img_name)\n",
+    "    img = cv2.imread(img_path)\n",
+    "    if img is not None:\n",
+    "        curvature = feat.AmountOfLineCurvature()(img)\n",
+    "        data[\"clothes\"].append(curvature)\n",
+    "\n",
+    "for cls in other_classes:\n",
+    "    class_path = path + \"/garbage-dataset/\" + cls\n",
+    "    for img_name in os.listdir(class_path):\n",
+    "        img_path = os.path.join(class_path, img_name)\n",
+    "        img = cv2.imread(img_path)\n",
+    "        if img is not None:\n",
+    "            curvature = feat.AmountOfLineCurvature()(img)\n",
+    "            data[\"others\"].append(curvature)\n",
+    "\n",
+    "clothes_curvature = np.array(data[\"clothes\"])\n",
+    "others_curvature = np.array(data[\"others\"])\n",
+    "\n",
+    "# t-тест Стьюдента\n",
+    "t_stat, t_p_value = ttest_ind(clothes_curvature, others_curvature, equal_var=False)\n",
+    "\n",
+    "# ANOVA\n",
+    "a_stat, a_p_value = f_oneway(clothes_curvature, others_curvature)\n",
+    "\n",
+    "# U-тест Манна-Уитни\n",
+    "u_stat, u_p_value = mannwhitneyu(clothes_curvature, others_curvature)\n",
+    "\n",
+    "if t_p_value < 0.05 and a_p_value < 0.05 and u_p_value < 0.05:\n",
+    "    print(\"Итог: гипотеза подтверждена: одежду можно отличить от других классов по наличию волнистых краёв или складок.\")\n",
+    "else:\n",
+    "    print(\"Итог: гипотеза не подтверждена: различия между классами недостаточно статистически значимы.\")\n"
    ]
   }
  ],
