feat: add 5th hypothesis

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pasha/dump5/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import kagglehub\n",
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,10 +326,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Результаты тестов:\n",
+      "ANOVA: Statistic = 20.58609333952457, p-value = 5.975820361191762e-35\n",
+      "Pearson Correlation: Correlation = 0.18124483155277124, p-value = 1.498345430277706e-145\n",
+      "Итог: гипотеза подтверждена: цилиндры чаще встречаются на изображениях стекла и металла.\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_path = path + \"/garbage-dataset/\"\n",
+    "\n",
+    "def process_images(class_name):\n",
+    "    class_path = os.path.join(base_path, class_name)\n",
+    "    cylinder_counts = []\n",
+    "\n",
+    "    for filename in os.listdir(class_path):\n",
+    "        image_path = os.path.join(class_path, filename)\n",
+    "        image = cv2.imread(image_path)\n",
+    "        if image is not None:\n",
+    "            cylinder_counts.append(feat.AmountOfCylinders()(image))\n",
+    "\n",
+    "    return cylinder_counts\n",
+    "\n",
+    "cylinder_data = {}\n",
+    "for cls in classes:\n",
+    "    cylinder_data[cls] = process_images(cls)\n",
+    "\n",
+    "# 1. ANOVA для сравнения всех классов\n",
+    "anova_data = [cylinder_data[cls] for cls in classes]\n",
+    "anova_stat, anova_p = f_oneway(*anova_data)\n",
+    "\n",
+    "# 2. Корреляция Спирмена между классами и количеством цилиндров\n",
+    "class_labels = []\n",
+    "cylinder_counts = []\n",
+    "for idx, cls in enumerate(classes):\n",
+    "    class_labels.extend([idx] * len(cylinder_data[cls]))\n",
+    "    cylinder_counts.extend(cylinder_data[cls])\n",
+    "\n",
+    "spearman_corr, spearman_p = spearmanr(class_labels, cylinder_counts)\n",
+    "\n",
+    "\n",
+    "print(\"Результаты тестов:\")\n",
+    "print(f\"ANOVA: Statistic = {anova_stat}, p-value = {anova_p}\")\n",
+    "print(f\"Pearson Correlation: Correlation = {spearman_corr}, p-value = {spearman_p}\")\n",
+    "\n",
+    "\n",
+    "if anova_p < 0.05 and spearman_p < 0.05 :\n",
+    "    print(\"Итог: гипотеза подтверждена: цилиндры чаще встречаются на изображениях стекла и металла.\")\n",
+    "else:\n",
+    "    print(\"Итог: гипотеза не подтверждена: не подтверждена.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
