docs: add conclusion

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -325,6 +325,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Гипотеза №4 На изображениях со стеклом и на изображениях с металлом присутствуют цилиндрические формы, окружности.\n",
+    "\n",
+    "Цилиндрические формы и окружности являются характерными геометрическими элементами, которые могут встречаться на изображениях, содержащих стекло и металл.\n",
+    "\n",
+    "- Способы проверки:\n",
+    "    - **ANOVA (дисперсионный анализ)**: Этот метод позволит нам проверить наличие значимых различий в количестве цилиндрических форм между группами (стекло, металл и другие классы). ANOVA поможет определить, существуют ли статистически значимые различия между средними значениями количества цилиндров в различных классах.\n",
+    "\n",
+    "    - **Корреляция Спирмена**: С помощью этого теста мы проанализируем взаимосвязь между классами изображений и количеством цилиндрических форм, что позволит оценить, насколько сильно класс материала влияет на количество цилиндров."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -1004,6 +1018,30 @@
     "    print(\"Итог: гипотеза подтверждена: одежду можно отличить от других классов по наличию волнистых краёв или складок.\")\n",
     "else:\n",
     "    print(\"Итог: гипотеза не подтверждена: различия между классами недостаточно статистически значимы.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Выводы\n",
+    "#### Были подтверждены следующие гипотезы:\n",
+    "\n",
+    "- Гипотеза №1 О наличие картона на картинке можно судить по скосу желтого цвета.\n",
+    "- Гипотеза №3 На картинках с картоном присутствует множество параллельных линий.\n",
+    "- Гипотеза №4 На изображениях со стеклом и на изображениях с металлом присутствуют цилиндрические формы, окружности.\n",
+    "- Гипотеза №6: Изображения с пластиком и стеклом часто имеют больше прозрачных областей.\n",
+    "- Гипотеза №11 О наличие бумаги на картинке можно судить по скосу белого цвета.\n",
+    "\n",
+    "#### Были опровергнуты следующие гипотезы:\n",
+    "\n",
+    "- Гипотеза №2 О наличие металла на картинке можно судить по скосу серого (серебряного) цвета.\n",
+    "- Гипотеза №5 Металлические поверхности часто имеют высокую отражающую способность. \n",
+    "- Гипотеза №7: Металлы часто имеют гладкую текстуру по сравнению с другими материалами.\n",
+    "- Гипотеза №8: Металл и пластик часто имеют яркие участки, особенно под прямым освещением.\n",
+    "- Гипотеза №9: У металла анизотропия текстуры (ориентированность линий) может быть выше из-за шлифовки или полос.\n",
+    "- Гипотеза №10: Металл и стекло имеют более постоянные размеры и пропорции на изображениях. \n",
+    "- Гипотеза №12 Одежду можно отличить от других классов по наличию волнистых краёв или складок, которые часто встречаются на ткани."
    ]
   }
  ],
