--- a/classifier_test.ipynb
+++ b/classifier_test.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Импорты"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +18,7 @@
     "import kagglehub\n",
     "import numpy as np\n",
     "import os\n",
+    "import warnings\n",
     "\n",
     "from collections import defaultdict\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -31,22 +39,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'image_names' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m path \u001b[38;5;241m=\u001b[39m kagglehub\u001b[38;5;241m.\u001b[39mdataset_download(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msumn2u/garbage-classification-v2\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m classes \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mlistdir(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgarbage-dataset\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m----> 3\u001b[0m train_images, test_images_class \u001b[38;5;241m=\u001b[39m train_test_split(\u001b[43mimage_names\u001b[49m, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_features\u001b[39m(img):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (AmountOfYellow()(img),\n\u001b[1;32m      7\u001b[0m             AmountOfSilver()(img),\n\u001b[1;32m      8\u001b[0m             AmountOfParallelLines()(img),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     16\u001b[0m             AmountOfWhiteness()(img),\n\u001b[1;32m     17\u001b[0m             AmountOfLineCurvature()(img),)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'image_names' is not defined"
-     ]
-    }
-   ],
+   "source": [
+    "### Отключение ворнингов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Загрузка классификатора и разбиение изображений"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "path = kagglehub.dataset_download(\"sumn2u/garbage-classification-v2\")\n",
     "classes = os.listdir(os.path.join(path, \"garbage-dataset\"))\n",
@@ -76,16 +95,6 @@
     "    # Split the images into training and testing sets (80% train, 20% test)\n",
     "    train_images, test_images_class = train_test_split(image_names, test_size=0.2, random_state=42)\n",
     "\n",
-    "    # Process training images\n",
-    "    for image_name in train_images:\n",
-    "        image_path = os.path.join(class_path, image_name)\n",
-    "        image = cv2.imread(image_path)\n",
-    "\n",
-    "        if image is not None:\n",
-    "            features_list = get_features(image)\n",
-    "            features.append(features_list)\n",
-    "            labels.append(class_name)\n",
-    "\n",
     "    # Collect test images for manual testing\n",
     "    for image_name in test_images_class:\n",
     "        test_images.append(os.path.join(class_path, image_name))\n",
@@ -104,37 +113,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Тест классификатора на разных клаасах"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'test_images' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mdict\u001b[39m(predictions)  \n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m class_name \u001b[38;5;129;01min\u001b[39;00m classes:\n\u001b[0;32m---> 11\u001b[0m     results \u001b[38;5;241m=\u001b[39m test_classify(\u001b[43mtest_images\u001b[49m, class_name)\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPredicted class counts for test images containing \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m class_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m class_name, count \u001b[38;5;129;01min\u001b[39;00m results\u001b[38;5;241m.\u001b[39mitems():\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'test_images' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class counts for test images containing 'trash':\n",
+      "Class: trash, Count: 87\n",
+      "Class: clothes, Count: 11\n",
+      "Class: plastic, Count: 12\n",
+      "Class: glass, Count: 45\n",
+      "Class: paper, Count: 4\n",
+      "Class: shoes, Count: 9\n",
+      "Class: metal, Count: 6\n",
+      "Class: battery, Count: 3\n",
+      "Class: cardboard, Count: 10\n",
+      "Class: biological, Count: 3\n",
+      "Correctly guessed 87 out of 190 for class 'trash'.\n",
+      "Predicted class counts for test images containing 'glass':\n",
+      "Class: glass, Count: 365\n",
+      "Class: metal, Count: 10\n",
+      "Class: trash, Count: 15\n",
+      "Class: plastic, Count: 37\n",
+      "Class: shoes, Count: 54\n",
+      "Class: clothes, Count: 75\n",
+      "Class: biological, Count: 18\n",
+      "Class: cardboard, Count: 8\n",
+      "Class: paper, Count: 14\n",
+      "Class: battery, Count: 17\n",
+      "Correctly guessed 365 out of 613 for class 'glass'.\n",
+      "Predicted class counts for test images containing 'battery':\n",
+      "Class: shoes, Count: 29\n",
+      "Class: glass, Count: 23\n",
+      "Class: battery, Count: 116\n",
+      "Class: biological, Count: 11\n",
+      "Class: trash, Count: 1\n",
+      "Class: clothes, Count: 4\n",
+      "Class: cardboard, Count: 3\n",
+      "Class: plastic, Count: 1\n",
+      "Class: metal, Count: 1\n",
+      "Correctly guessed 116 out of 189 for class 'battery'.\n",
+      "Predicted class counts for test images containing 'clothes':\n",
+      "Class: clothes, Count: 1006\n",
+      "Class: paper, Count: 13\n",
+      "Class: plastic, Count: 14\n",
+      "Class: shoes, Count: 7\n",
+      "Class: biological, Count: 7\n",
+      "Class: cardboard, Count: 3\n",
+      "Class: glass, Count: 14\n",
+      "Class: metal, Count: 1\n",
+      "Class: battery, Count: 1\n",
+      "Correctly guessed 1006 out of 1066 for class 'clothes'.\n",
+      "Predicted class counts for test images containing 'metal':\n",
+      "Class: clothes, Count: 41\n",
+      "Class: shoes, Count: 35\n",
+      "Class: battery, Count: 5\n",
+      "Class: metal, Count: 43\n",
+      "Class: glass, Count: 35\n",
+      "Class: paper, Count: 10\n",
+      "Class: biological, Count: 13\n",
+      "Class: plastic, Count: 12\n",
+      "Class: cardboard, Count: 6\n",
+      "Class: trash, Count: 4\n",
+      "Correctly guessed 43 out of 204 for class 'metal'.\n",
+      "Predicted class counts for test images containing 'plastic':\n",
+      "Class: plastic, Count: 171\n",
+      "Class: glass, Count: 61\n",
+      "Class: clothes, Count: 89\n",
+      "Class: battery, Count: 2\n",
+      "Class: paper, Count: 17\n",
+      "Class: cardboard, Count: 18\n",
+      "Class: metal, Count: 4\n",
+      "Class: shoes, Count: 15\n",
+      "Class: biological, Count: 7\n",
+      "Class: trash, Count: 13\n",
+      "Correctly guessed 171 out of 397 for class 'plastic'.\n",
+      "Predicted class counts for test images containing 'cardboard':\n",
+      "Class: cardboard, Count: 216\n",
+      "Class: clothes, Count: 57\n",
+      "Class: paper, Count: 13\n",
+      "Class: glass, Count: 22\n",
+      "Class: shoes, Count: 13\n",
+      "Class: plastic, Count: 15\n",
+      "Class: trash, Count: 9\n",
+      "Class: biological, Count: 14\n",
+      "Class: battery, Count: 4\n",
+      "Class: metal, Count: 2\n",
+      "Correctly guessed 216 out of 365 for class 'cardboard'.\n",
+      "Predicted class counts for test images containing 'paper':\n",
+      "Class: cardboard, Count: 14\n",
+      "Class: clothes, Count: 58\n",
+      "Class: glass, Count: 33\n",
+      "Class: metal, Count: 5\n",
+      "Class: paper, Count: 183\n",
+      "Class: plastic, Count: 22\n",
+      "Class: shoes, Count: 9\n",
+      "Class: battery, Count: 4\n",
+      "Class: trash, Count: 6\n",
+      "Class: biological, Count: 2\n",
+      "Correctly guessed 183 out of 336 for class 'paper'.\n",
+      "Predicted class counts for test images containing 'biological':\n",
+      "Class: biological, Count: 136\n",
+      "Class: clothes, Count: 12\n",
+      "Class: glass, Count: 16\n",
+      "Class: shoes, Count: 27\n",
+      "Class: trash, Count: 1\n",
+      "Class: paper, Count: 2\n",
+      "Class: cardboard, Count: 4\n",
+      "Class: plastic, Count: 2\n",
+      "Correctly guessed 136 out of 200 for class 'biological'.\n",
+      "Predicted class counts for test images containing 'shoes':\n",
+      "Class: glass, Count: 54\n",
+      "Class: shoes, Count: 201\n",
+      "Class: clothes, Count: 73\n",
+      "Class: battery, Count: 11\n",
+      "Class: cardboard, Count: 13\n",
+      "Class: plastic, Count: 8\n",
+      "Class: trash, Count: 3\n",
+      "Class: paper, Count: 6\n",
+      "Class: metal, Count: 3\n",
+      "Class: biological, Count: 24\n",
+      "Correctly guessed 201 out of 396 for class 'shoes'.\n"
      ]
     }
    ],
    "source": [
-    "# Classifier testing (runs classifier for the remaining images)\n",
     "def test_classify(test_images, target_class_name):\n",
     "    predictions = defaultdict(int)\n",
+    "    total_count = 0\n",
+    "    correct_count = 0\n",
+    "\n",
     "    for test_image in test_images:\n",
     "        if target_class_name in test_image:  \n",
+    "            total_count += 1  # Increment total count for the target class\n",
     "            predicted_class = classify_image(test_image)  \n",
     "            predictions[predicted_class] += 1 \n",
-    "    return dict(predictions)  \n",
+    "            if predicted_class == target_class_name:\n",
+    "                correct_count += 1  # Increment correct count if prediction matches target class\n",
+    "\n",
+    "    return dict(predictions), total_count, correct_count  \n",
     "\n",
     "for class_name in classes:\n",
-    "    results = test_classify(test_images, class_name)\n",
-    "    print(\"Predicted class counts for test images containing \" + class_name + ':')\n",
-    "    for class_name, count in results.items():\n",
-    "        print(f\"Class: {class_name}, Count: {count}\")"
+    "    results, total_count, correct_count = test_classify(test_images, class_name)\n",
+    "    print(f\"Predicted class counts for test images containing '{class_name}':\")\n",
+    "    for predicted_class, count in results.items():\n",
+    "        print(f\"Class: {predicted_class}, Count: {count}\")\n",
+    "    print(f\"Correctly guessed {correct_count} out of {total_count} for class '{class_name}'.\")"
    ]
   }
  ],
